# rectify_tools

./: .clang-format  .gitignore  LICENSE  README.md  rectImg.xmind
cc/: .clang-format  CMakeLists.txt  run.cc
cc/cuda/: bilinear.cu  bilinear.cuh
cc/src/: gen_lut.cc  gen_lut.h  lut_parser.cc  lut_parser.h  rect_img.cc  rect_img.h  rect_img_nighty.cc  rename.sh  use_lut.cc  use_lut.h  utils.cc  utils.h
cc/test/: test.py
cpp/: .gitignore  CMakeLists.txt  README.md  run.cc  run.cpp
cpp/data/case3/imgL/: IR-left-2022-4-8-18-28-20-654-1-996-57660643_DenseMap.mat
cpp/data/case3/output/: LutDecRGB_640_400.txt  LutDecR_640_400.txt  cam_param.txt  rectL_996.yuv  rectR_996.yuv
cpp/src/: gen_lut.cc  gen_lut.h  lutParser.cpp  lutParser.h  lut_parser.cc  lut_parser.cpp  lut_parser.h  rect_img.cc  rect_img.cpp  rect_img.h  rect_img_nighty.cpp  rectimg.cpp  rectimg.h  rename.sh  useLut.cpp  use_lut.cc  use_lut.cpp  use_lut.h  utils.cc  utils.cpp  utils.h
cpp/test/: test.py
genlut/: CMakeLists.txt
genlut/src/: gen_sample_point.cc  gen_sample_point.h  generate_lut.cc  generate_lut.h
matlab/: apply_distortion.m  cam2world.m  comp_distortion.m  comp_distortion_oulu.m  getRectifyParam.m  getRectifyPlane.m  normalize_pixel.m  ocam_undistort.m  ocam_undistort_map.m  omni3d2pixel.m  pextend.m  pflat.m  project_points.m  rectImg.m  rect_index.m  rectifyOneImage.m  rigid_motion.m  rodrigues.m  splitIndex2.m  test.asv  test.m  world2cam_fast.m
python/: rectimg.py
uselut/: CMakeLists.txt  README.md  run.cpp
uselut/cuda/: bilinear.cu  bilinear.h
uselut/data/output/: LutDecL_640_400.txt  LutDecRGB_1280_720.txt  LutDecRGB_1600_800.txt  LutDecRGB_1920_1080.txt  input.yuv  input1920.yuv  inputL_996.yuv  inputY.yuv
uselut/src/: lut_parser.cpp  lut_parser.h  rect_img.cpp  rect_img.h  use_lut.cpp  use_lut.h  utils.cpp  utils.h
uselut/test/: test.py
